fixing workshop responsiveness and adding animation

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
       href="https://fonts.googleapis.com/css?family=Didact+Gothic"
       rel="stylesheet"
     />
+
+    <!-- animate.css -->
+    <link rel="stylesheet" href="animate.min.css" />
+
     <title>Sour Flour</title>
   </head>
   <body>
